--- a/_generator/controller/new/register.hbs
+++ b/_generator/controller/new/register.hbs
@@ -5,5 +5,5 @@ action:
     After: "// Register Controllers"
 ---
 
-import {{name}} from './controller/{{name}}.mjs';
-controllers.addController({{name}});
+import {{camel_case name}} from './controller/{{name}}.mjs';
+controllers.addController({{camel_case name}});
