--- a/_generator/controller/new/controller.hbs
+++ b/_generator/controller/new/controller.hbs
@@ -1,5 +1,5 @@
 ---
-path: example/app/controller/{{name}}.mjs
+path: example/app/controller/{{name}}.{{default extension "mjs"}}
 ---
 
 export default function {{camel_case name}}() {
